fix image overflow

--- a/styles/main-header.module.css
+++ b/styles/main-header.module.css
@@ -15,7 +15,7 @@
     pointer-events: none;
     user-select: none;
     transform: translate(-50%, -50%) scaleX(1.2);
-    width: 600px;
+    width: 100%;
     max-width: 95vw;
     overflow: hidden;
     pointer-events: none;
